--- a/src/css/style.css
+++ b/src/css/style.css
@@ -77,6 +77,10 @@ html {
 	min-width: 50% !important;
 }
 
+.max-w-50 {
+  max-width: 50% !important;
+}
+
 .mh-500 {
 	max-height: 500px !important;
 }
@@ -149,8 +153,55 @@ ul, li {
     color: orange !important;
   }
 
+  .light-blue {
+    color: lightblue !important;
+  }
+
+  .yellow {
+    color : yellow !important;
+  }
+
+  .grey {
+    color : grey !important;
+  }
+
   .same-size {
     min-width: 30%!important;
+  }
+
+  .react-select-container {
+    min-width: 150px !important;
+  }
+
+  .small-input {
+    min-width: 40px !important;
+    max-width: 40px !important;
+  }
+
+  .small-table {
+    max-width: 1000px !important;
+  }
+
+  /*=========== icones ============= */
+
+  .large-icon {
+    font-size: 25px !important;
+  }
+
+  .norm-icon {
+    font-size: 20px !important;
+  }
+
+
+/*=========== jdr ============= */
+  .w-small {
+    width: 40px !important;
+  }
+
+  .my-character {
+    border-radius: 10% !important;
+    border-style: solid !important;
+    border-color: white !important;
   }
 
 /*=========== circular menu =============*/
